atualizando header com hover

--- a/codigos/lojinha.html
+++ b/codigos/lojinha.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header class="header">
+        <a href="home.html">
         <div id="img-logogrifo">
             <img src="/projetobecomp01/imagens/NOVO MASCOTE GRIFO 2.svg">
         </div>
+        </a>
         <div id="espaco"></div>
         <div id="Home">
             <a href="home.html">
