--- a/codigos/parcerias.html
+++ b/codigos/parcerias.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header class="header">
+        <a href="home.html">
         <div id="img-logogrifo">
             <img src="/projetobecomp01/imagens/NOVO MASCOTE GRIFO 2.svg">
         </div>
+        </a>
         <div id="espaco"></div>
         <div id="Home">
             <a href="home.html">
@@ -45,11 +47,11 @@
             </div>
             <div class="sub">
                 <h1 class="title1">SUBWAY</h1>
-                <p1 class="latim1">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Nam quis est at felis congue bibendum. Morbi
-                nec fringilla tortor. Sed malesuada mi vitae placerat
-                fermentum. Proin rutrum scelerisque tortor, nec
-                dapibus</p1>
+                <p1 class="latim1">
+                    O GRIFO fez uma parceria com o Subway que garante 
+                    para os sócios um cookie ou um chips na compra de um combo Sub 15cm + bebida,
+                    torne-se sócio e desfrute do brinde.
+                </p1>
             </div>
         </div>       
     </main>
@@ -61,11 +63,10 @@
             </div>
             <div class="vikings">
                 <h1 class="title2">VIKINGS</h1>
-                <p1 class="latim2">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Nam quis est at felis congue bibendum. Morbi
-                nec fringilla tortor. Sed malesuada mi vitae placerat
-                fermentum. Proin rutrum scelerisque tortor, nec
-                dapibus</p1>
+                <p1 class="latim2">
+                    Vikings é um restaurante de carnes, frutos dos mar e sanduíches.
+                    Não perca os descontos tornando-se sócio do GRIFO.
+                </p1>
             </div>
         </div>       
     </main>
@@ -78,11 +79,11 @@
             <div class="tia">
                 
                 <h1 class="title3">TIA LILICA</h1>
-                <p1 class="latim3">Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Nam quis est at felis congue bibendum. Morbi
-                nec fringilla tortor. Sed malesuada mi vitae placerat
-                fermentum. Proin rutrum scelerisque tortor, nec
-                dapibus</p1>
+                <p1 class="latim3">Tia Lilica é uma loja de artefatos militares,
+                    um militar sempre precisa atualizar seus pertences. Nada melhor
+                    do que aproveitar o desconto na loja da Tia Lilica para ter tudo do melhor.
+                    Além disso, a loja é perto do IME!
+                </p1>
             </div>
         </div>       
     </main>
