att parceria e hover na lojinha

--- a/codigos/home.html
+++ b/codigos/home.html
@@ -16,7 +16,7 @@
         </a>
         <div id="espaco"></div>
         <div id="Home">
-            <a href="home.html">
+            <a href="home.html" style="text-decoration:none">
             <p>Home</p>
             </a>
         </div>
@@ -24,12 +24,12 @@
          <p>Eventos</p>
         </div>
         <div id="Lojinha">
-         <a href="lojinha.html">
+         <a href="lojinha.html" style="text-decoration:none">
          <p>Lojinha</p>
          </a>
         </div>
         <div id="Parcerias">
-            <a href="parcerias.html">
+            <a href="parcerias.html" style="text-decoration:none">
             <p>Parcerias</p>
             </a>
         </div>
