--- a/codigos/lojinha.html
+++ b/codigos/lojinha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Lojinha</title>
     <link rel="stylesheet" href=lojinhacss.css>
 
 </head>
@@ -17,7 +17,7 @@
         </a>
         <div id="espaco"></div>
         <div id="Home">
-            <a href="home.html">
+            <a href="home.html" style="text-decoration:none">
             <p>Home</p>
             </a>
         </div>
@@ -25,12 +25,12 @@
          <p>Eventos</p>
         </div>
         <div id="Lojinha">
-         <a href="lojinha.html">
+         <a href="lojinha.html" style="text-decoration:none">
          <p>Lojinha</p>
          </a>
         </div>
         <div id="Parcerias">
-            <a href="parcerias.html">
+            <a href="parcerias.html" style="text-decoration:none">
             <p>Parcerias</p>
             </a>
         </div>
@@ -44,42 +44,43 @@
     <div class ="container">
             <h1>DESCUBRA NOSSA SELEÇÃO DE PRODUTOS</h1>
             <div class="quadradinho">
-                <div class="blusa">
+                <div class="produto">
                     <img src="/projetobecomp01/imagens/1.png">
                     <p>BLUSA PRETA <br>R$45,00</p>
                 </div>
-                <div class="blusa">
+                <div class="produto">
                     <img src="/projetobecomp01/imagens/1.png">
                     <p>BLUSA PRETA <br>R$45,00</p>
                 </div>
-                <div class="blusa">
+                <div class="produto">
                     <img src="/projetobecomp01/imagens/1.png">
                     <p>BLUSA PRETA <br>R$45,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/caneca.png">
+                    <p>CANECA PRETA <br>R$25,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/caneca.png">
+                    <p>CANECA PRETA <br>R$25,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/caneca.png">
+                    <p>CANECA PRETA <br>R$25,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/bone.png">
+                    <p>BONÉ PRETO <br>R$35,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/bone.png">
+                    <p>BONÉ PRETO <br>R$35,00</p>
                 </div>
-                <div class="blusa">
-                    <img src="/projetobecomp01/imagens/1.png">
-                    <p>BLUSA PRETA <br>R$45,00</p>
+                <div class="produto">
+                    <img src="/projetobecomp01/imagens/bone.png">
+                    <p>BONÉ PRETO <br>R$35,00</p>
                 </div>
             </div>
     </div>
 </body>
+</html>
