--- a/codigos/parcerias.html
+++ b/codigos/parcerias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Parcerias</title>
     <link rel="stylesheet" href=parceriascss.css>
 </head>
 <body>
@@ -16,7 +16,7 @@
         </a>
         <div id="espaco"></div>
         <div id="Home">
-            <a href="home.html">
+            <a href="home.html" style="text-decoration:none">
             <p>Home</p>
             </a>
         </div>
@@ -24,12 +24,12 @@
          <p>Eventos</p>
         </div>
         <div id="Lojinha">
-         <a href="lojinha.html">
+         <a href="lojinha.html" style="text-decoration:none">
          <p>Lojinha</p>
          </a>
         </div>
         <div id="Parcerias">
-            <a href="parcerias.html">
+            <a href="parcerias.html" style="text-decoration:none">
             <p>Parcerias</p>
             </a>
         </div>
@@ -42,51 +42,68 @@
 <div class="divisorias">
     <main>
         <div class="container1">
-            <div class="img1">
-                <img src="/projetobecomp01/imagens/subway image.png">
-            </div>
-            <div class="sub">
-                <h1 class="title1">SUBWAY</h1>
-                <p1 class="latim1">
+            <div class="conteudo">
+                <div class="img1">
+                 <img src="/projetobecomp01/imagens/subway image.png">
+                </div>
+             <div class="sub">
+                 <h1 class="title1">SUBWAY</h1>
+                 <p1 class="latim1">
                     O GRIFO fez uma parceria com o Subway que garante 
                     para os sócios um cookie ou um chips na compra de um combo Sub 15cm + bebida,
-                    torne-se sócio e desfrute do brinde.
-                </p1>
+                    torne-se sócio e desfrute do brinde.<br><br>
+                  </p1>
+                  <p1>Confira:&nbsp;&nbsp;</p1>
+                  <a href="https://www.instagram.com/baratissimodaurca/" target="_blank" rel="noopener noreferrer">
+                  <img src="/projetobecomp01/imagens/Instagram - Original.svg">
+                  </a>
+             </div>
             </div>
         </div>       
     </main>
 
     <main>
         <div class="container2">
-            <div class="img2">
-                <img src="/projetobecomp01/imagens/vikings.png">
-            </div>
-            <div class="vikings">
-                <h1 class="title2">VIKINGS</h1>
-                <p1 class="latim2">
+            <div class="conteudo">
+                <div class="img2">
+                 <img src="/projetobecomp01/imagens/vikings.png">
+             </div>
+             <div class="vikings">
+                 <h1 class="title2">VIKINGS</h1>
+                 <p1 class="latim2">
                     Vikings é um restaurante de carnes, frutos dos mar e sanduíches.
-                    Não perca os descontos tornando-se sócio do GRIFO.
-                </p1>
+                    Não perca os descontos tornando-se sócio do GRIFO.<br><br>
+                  </p1>
+                  <p1>Confira:&nbsp;&nbsp;</p1>
+                  <a href="https://www.instagram.com/vikings.br/" target="_blank" rel="noopener noreferrer">
+                  <img src="/projetobecomp01/imagens/png-clipart-instagram-computer-icons-logo-instagram-text-logo-thumbnail.png">
+                  </a>
+             </div>
             </div>
         </div>       
     </main>
 
     <main>
         <div class="container3">
-            <div class="img3">
-                <img src="/projetobecomp01/imagens/tia lilica.png">
-            </div>
-            <div class="tia">
-                
-                <h1 class="title3">TIA LILICA</h1>
-                <p1 class="latim3">Tia Lilica é uma loja de artefatos militares,
+            <div class="conteudo">
+                <div class="img3">
+                    <img src="/projetobecomp01/imagens/tia lilica.png">
+             </div>
+             <div class="tia"> 
+                 <h1 class="title3">TIA LILICA</h1>
+                 <p1 class="latim3">Tia Lilica é uma loja de artefatos militares,
                     um militar sempre precisa atualizar seus pertences. Nada melhor
                     do que aproveitar o desconto na loja da Tia Lilica para ter tudo do melhor.
-                    Além disso, a loja é perto do IME!
-                </p1>
+                    Além disso, a loja é perto do IME!<br><br>
+                 </p1>
+                 <p1>Confira:&nbsp;&nbsp;</p1>
+                 <a href="https://www.instagram.com/lojadatialilicafbuniformes/" target="_blank" rel="noopener noreferrer">
+                  <img src="/projetobecomp01/imagens/Instagram - Original.svg">
+                 </a>
             </div>
         </div>       
     </main>
-</div>
+</body>
+</html>
 
     
