--- a/codigos/home.html
+++ b/codigos/home.html
@@ -21,7 +21,9 @@
             </a>
         </div>
         <div id="Eventos">
-         <p>Eventos</p>
+            <a href="eventos.html" style="text-decoration:none">  
+            <p>Eventos</p>
+            </a>
         </div>
         <div id="Lojinha">
          <a href="lojinha.html" style="text-decoration:none">
