--- a/codigos/parcerias.html
+++ b/codigos/parcerias.html
@@ -21,7 +21,9 @@
             </a>
         </div>
         <div id="Eventos">
-         <p>Eventos</p>
+            <a href="eventos.html" style="text-decoration:none">  
+            <p>Eventos</p>
+            </a>
         </div>
         <div id="Lojinha">
          <a href="lojinha.html" style="text-decoration:none">
@@ -51,7 +53,7 @@
                  <p1 class="latim1">
                     O GRIFO fez uma parceria com o Subway que garante 
                     para os sócios um cookie ou um chips na compra de um combo Sub 15cm + bebida,
-                    torne-se sócio e desfrute do brinde.<br><br>
+                    torne-se sócio e desfrute do brinde.<br>
                   </p1>
                   <p1>Confira:&nbsp;&nbsp;</p1>
                   <a href="https://www.instagram.com/baratissimodaurca/" target="_blank" rel="noopener noreferrer">
@@ -72,7 +74,7 @@
                  <h1 class="title2">VIKINGS</h1>
                  <p1 class="latim2">
                     Vikings é um restaurante de carnes, frutos dos mar e sanduíches.
-                    Não perca os descontos tornando-se sócio do GRIFO.<br><br>
+                    Não perca os descontos tornando-se sócio do GRIFO.<br>
                   </p1>
                   <p1>Confira:&nbsp;&nbsp;</p1>
                   <a href="https://www.instagram.com/vikings.br/" target="_blank" rel="noopener noreferrer">
@@ -94,7 +96,7 @@
                  <p1 class="latim3">Tia Lilica é uma loja de artefatos militares,
                     um militar sempre precisa atualizar seus pertences. Nada melhor
                     do que aproveitar o desconto na loja da Tia Lilica para ter tudo do melhor.
-                    Além disso, a loja é perto do IME!<br><br>
+                    Além disso, a loja é perto do IME!<br>
                  </p1>
                  <p1>Confira:&nbsp;&nbsp;</p1>
                  <a href="https://www.instagram.com/lojadatialilicafbuniformes/" target="_blank" rel="noopener noreferrer">
